update JVM info